force-app/main/default/objects/CampoDocumento__c/CampoDocumento__c.object-meta.xml
<CustomObject>
    <description>Objeto personalizado relacionado con el objeto  tipo documento donde indicaremos los campos que tienen un tipo de documento concreto</description>
    <label>Campo del documento</label>
    <nameField>
        <label>Nombre del campo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campos del documento</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>