force-app/main/default/objects/CampoDocumento__c/fields/NombreAPI__c.field-meta.xml
<CustomField>
    <fullName>NombreAPI__c</fullName>
    <description>Etiqueta de cómo será enviado el campo al gestor documental</description>
    <label>Nombre API</label>
    <length>50</length>
    <type>Text</type>
</CustomField>