force-app/main/default/objects/CampoDocumento__c/fields/TipoCampo__c.field-meta.xml
<CustomField>
    <fullName>TipoCampo__c</fullName>
    <description>Tipo del dato que se introducirá en el campo</description>
    <label>Tipo del campo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Date</fullName>
                <label>Fecha</label>
            </value>
            <value>
                <fullName>number</fullName>
                <label>Numérico</label>
            </value>
            <value>
                <fullName>text</fullName>
                <label>Texto</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>