force-app/main/default/objects/CampoDocumento__c/fields/TipoDocumento__c.field-meta.xml
<CustomField>
    <fullName>TipoDocumento__c</fullName>
    <description>Tipo de documento al que pertenece el campo</description>
    <label>Tipo de Documento</label>
    <referenceTo>TipoDocumento__c</referenceTo>
    <relationshipLabel>Campos del documento</relationshipLabel>
    <relationshipName>Campos_del_documento</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>